--- a/fishing/index.html
+++ b/fishing/index.html
@@ -27,7 +27,7 @@
         <div id="header">
             <!-- begin header -->
             <div id="logo" class="span-6">
-                <a href="../index.html"> <img src="../css/img/gs_logo.png" alt="Grindstone Angling - Ontario Canada" width="201" height="103" /></a>
+                <a href="../"> <img src="../css/img/gs_logo.png" alt="Grindstone Angling - Ontario Canada" width="201" height="103" /></a>
             </div>
 
             <span id="tagline"><strong>Ontario&rsquo;s Premier Fly Shop, Outfitter, and Guide
@@ -42,7 +42,7 @@
                     <li class=""><a href=".index.html">Fly
                                                         Shop</a>
                         <ul class="sf-menu">
-                            <li class=""><a href="../fly-tying/index.html">Fly Tying
+                            <li class=""><a href="../fly-tying/">Fly Tying
                                                                         Classes</a></li>
                             <li class=""><a href="../flyshop/pro-staff.html">Pro Staff</a>
                             </li>
@@ -53,7 +53,7 @@
                     </li>
                     <li class="nav-item"><a href="guiding.html">Guide
                                                         Service</a></li>
-                    <li class=""><a href="../school/index.html">Fly Fishing School</a>
+                    <li class=""><a href="../school/">Fly Fishing School</a>
                         <ul class="sf-menu">
                             <li class=""><a href="../school/introduction-fly-fishing.html">Introduction</a>
                             </li>
@@ -78,7 +78,7 @@
                     </li>
                     <li class=""><a href="index.html">The Fishing</a>
                         <ul class="sf-menu">
-                            <li class=""><a href="ontario/index.html">Ontario Fishery</a>
+                            <li class=""><a href="ontario/">Ontario Fishery</a>
                                 <ul class="sf-menu">
                                     <li class=""><a href="ontario/salmon.html">Ontario
                                                                                         Salmon</a></li>
@@ -90,7 +90,7 @@
                                                                                         Trout</a></li>
                                 </ul>
                             </li>
-                            <li class=""><a href="rivers/index.html">Ontario Rivers</a>
+                            <li class=""><a href="rivers/">Ontario Rivers</a>
                                 <ul class="sf-menu">
                                     <li class=""><a href="rivers/grand.html">Grand
                                                                                         River</a></li>
@@ -100,7 +100,7 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="nav-item"><a href="../travel/index.html">Adventure Travel</a></li>
+                    <li class="nav-item"><a href="../travel/">Adventure Travel</a></li>
                     <li class=""><a href="../gallery.html">Gallery</a></li>
                     <li class="nav-item"><a href="../contact.html">Contact Us</a></li>
                 </ul>
@@ -164,13 +164,13 @@
                     to the largest population in the country, you can still find solitude if you are willing to work just a bit harder than the rest. The Saugeen and Grand River typify the diversity of the fishery in this region. Both systems are big
                     and both hold cold, cool and warm water species. It is possible to fish either of these two rivers for the entire season without ever getting bored as resident trout, steelhead, bass, muskie, pike and salmon inhabit them at some point
                     in the season.</p>
-                <h2 class="border-bottom"><a href="ontario/index.html">The Ontario Fishery</a></h2>
-                <p>With its many lakes, rivers and streams, easy access and a spectacular variety of game fishing opportunities, Southern Ontario is a Mecca for fly fishers. Take a closer look at <span class="more"><a href="ontario/index.html">Ontario's
+                <h2 class="border-bottom"><a href="ontario/">The Ontario Fishery</a></h2>
+                <p>With its many lakes, rivers and streams, easy access and a spectacular variety of game fishing opportunities, Southern Ontario is a Mecca for fly fishers. Take a closer look at <span class="more"><a href="ontario/">Ontario's
                                                         fishery</a> and learn about the species we target.</span></p>
 
-                <h2 class="border-bottom"><a href="rivers/index.html">Ontario Rivers</a></h2>
+                <h2 class="border-bottom"><a href="rivers/">Ontario Rivers</a></h2>
                 <p>With excellent water quality and a variety of conditions, the rivers and streams of southern and south central Ontario are home to a vast insect population and healthy, hard-fighting fish. Our experienced guides will put you on a productive
-                    Ontario river that meets your requirements. Read more about <span class="more"><a href="rivers/index.html">Ontario rivers</a>.</span></p>
+                    Ontario river that meets your requirements. Read more about <span class="more"><a href="rivers/">Ontario rivers</a>.</span></p>
 
 
 
@@ -194,7 +194,7 @@
                     <ul>
                         <li class="menu-item"><a href="index.html"><span>Ontario
                                                                         Fishing</span></a></li>
-                        <li class="menu-item"><a href="ontario/index.html"><span>Ontario
+                        <li class="menu-item"><a href="ontario/"><span>Ontario
                                                                         Fishery</span></a>
                             <ul>
                                 <li class="menu-item"><a href="ontario/salmon.html"><span>Salmon</span></a>
@@ -207,7 +207,7 @@
                                 </li>
                             </ul>
                         </li>
-                        <li class="menu-item"><a href="rivers/index.html"><span>Ontario
+                        <li class="menu-item"><a href="rivers/"><span>Ontario
                                                                         Rivers</span></a>
                             <ul>
                                 <li class="menu-item"><a href="rivers/grand.html"><span>Grand
