--- a/fly-tying/intermediate.html
+++ b/fly-tying/intermediate.html
@@ -27,7 +27,7 @@
             <!-- begin header -->
 
             <div id="logo" class="span-6">
-                <a href="../index.html"> <img src="../css/img/gs_logo.png" alt="Grindstone Angling Fly Shop - Ontario Canada" width="201" height="103" /></a>
+                <a href="../"> <img src="../css/img/gs_logo.png" alt="Grindstone Angling Fly Shop - Ontario Canada" width="201" height="103" /></a>
             </div>
 
             <span id="tagline"><strong>Ontario&#39;s Premier Fly Shop, Outfitter, and Guide Services</strong></span> <span id="phone">905-689-0880</span> </header>
@@ -37,7 +37,7 @@
             <div id="mainmenu">
                 <ul class="sf-menu">
                     <li class="nav-item"><a href="../home.html">Home</a></li>
-                    <li class=""><a href="../index.html">Fly Shop</a>
+                    <li class=""><a href="../">Fly Shop</a>
                         <ul class="sf-menu">
                             <li class=""><a href="index.html">Fly Tying Classes</a></li>
                             <li class=""><a href="../flyshop/pro-staff.html">Pro Staff</a></li>
@@ -46,7 +46,7 @@
                         </ul>
                     </li>
                     <li class="nav-item"><a href="../guiding.html">Guide Service</a></li>
-                    <li class=""><a href="../school/index.html">Fly Fishing School</a>
+                    <li class=""><a href="../school/">Fly Fishing School</a>
                         <ul class="sf-menu">
                             <li class=""><a href="../school/introduction-fly-fishing.html">Introduction</a></li>
                             <li class=""><a href="../school/intermediate-casting.html">Intermediate Fly Casting</a></li>
@@ -61,9 +61,9 @@
                             </li>
                         </ul>
                     </li>
-                    <li class=""><a href="../fishing/index.html">The Fishing</a>
+                    <li class=""><a href="../fishing/">The Fishing</a>
                         <ul class="sf-menu">
-                            <li class=""><a href="../fishing/ontario/index.html">Ontario Fishery</a>
+                            <li class=""><a href="../fishing/ontario/">Ontario Fishery</a>
                                 <ul class="sf-menu">
                                     <li class=""><a href="../fishing/ontario/salmon.html">Ontario Salmon</a></li>
                                     <li class=""><a href="../fishing/ontario/steelhead.html">Ontario Steelhead</a></li>
@@ -71,7 +71,7 @@
                                     <li class=""><a href="../fishing/ontario/trout.html">Ontario Trout</a></li>
                                 </ul>
                             </li>
-                            <li class=""><a href="../fishing/rivers/index.html">Ontario Rivers</a>
+                            <li class=""><a href="../fishing/rivers/">Ontario Rivers</a>
                                 <ul class="sf-menu">
                                     <li class=""><a href="../fishing/rivers/grand.html">Grand River</a></li>
                                     <li class=""><a href="../fishing/rivers/saugeen.html">Saugeen River</a></li>
@@ -79,7 +79,7 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="nav-item"><a href="../travel/index.html">Adventure Travel</a></li>
+                    <li class="nav-item"><a href="../travel/">Adventure Travel</a></li>
                     <li class=""><a href="../gallery.html">Gallery</a></li>
                     <li class="nav-item"><a href="../contact.html">Contact Us</a></li>
                 </ul>
@@ -115,7 +115,7 @@
 
         <div class="container">
             <div id="content" class="span-18 push-6 prepend-top" role="main">
-                <div id="crumbs"><a href="../index.html">Fly Shop</a>><a href="index.html">Fly Tying Classes</a>><a href="intermediate.html">Intermediate Fly Tying</a> </div>
+                <div id="crumbs"><a href="../">Fly Shop</a>><a href="index.html">Fly Tying Classes</a>><a href="intermediate.html">Intermediate Fly Tying</a> </div>
 
                 <!-- begin content -->
                 <div>
@@ -141,7 +141,7 @@
             <aside id="sidebar-left" class="span-6 pull-18 prepend-top last">
                 <div id="menu-wrapper">
                     <ul>
-                        <li class="menu-item"><a href="../index.html"><span>Fly Shop</span></a></li>
+                        <li class="menu-item"><a href="../"><span>Fly Shop</span></a></li>
                         <li class="menu-item"><a href="index.html"><span>Fly Tying Classes</span></a>
                             <ul>
                                 <li class="menu-item"><a href="introduction.html"><span>Introduction to Fly Tying</span></a></li>
