--- a/guiding.html
+++ b/guiding.html
@@ -39,14 +39,14 @@
                     <li class="nav-item"><a href="home.html">Home</a></li>
                     <li class=""><a href="index.html">Fly Shop</a>
                         <ul class="sf-menu">
-                            <li class=""><a href="fly-tying/index.html">Fly Tying Classes</a></li>
+                            <li class=""><a href="fly-tying/">Fly Tying Classes</a></li>
                             <li class=""><a href="flyshop/pro-staff.html">Pro Staff</a></li>
                             <li class=""><a href="flyshop/news.html">Shop News</a></li>
                             <li class=""><a href="flyshop/trading-post.html">Trading Post</a></li>
                         </ul>
                     </li>
                     <li class="nav-item"><a href="guiding.html">Guide Service</a></li>
-                    <li class=""><a href="school/index.html">Fly Fishing School</a>
+                    <li class=""><a href="school/">Fly Fishing School</a>
                         <ul class="sf-menu">
                             <li class=""><a href="school/introduction-fly-fishing.html">Introduction</a></li>
                             <li class=""><a href="school/intermediate-casting.html">Intermediate Fly Casting</a></li>
@@ -61,9 +61,9 @@
                             </li>
                         </ul>
                     </li>
-                    <li class=""><a href="fishing/index.html">The Fishing</a>
+                    <li class=""><a href="fishing/">The Fishing</a>
                         <ul class="sf-menu">
-                            <li class=""><a href="fishing/ontario/index.html">Ontario Fishery</a>
+                            <li class=""><a href="fishing/ontario/">Ontario Fishery</a>
                                 <ul class="sf-menu">
                                     <li class=""><a href="fishing/ontario/salmon.html">Ontario Salmon</a></li>
                                     <li class=""><a href="fishing/ontario/steelhead.html">Ontario Steelhead</a></li>
@@ -71,7 +71,7 @@
                                     <li class=""><a href="fishing/ontario/trout.html">Ontario Trout</a></li>
                                 </ul>
                             </li>
-                            <li class=""><a href="fishing/rivers/index.html">Ontario Rivers</a>
+                            <li class=""><a href="fishing/rivers/">Ontario Rivers</a>
                                 <ul class="sf-menu">
                                     <li class=""><a href="fishing/rivers/grand.html">Grand River</a></li>
                                     <li class=""><a href="fishing/rivers/saugeen.html">Saugeen River</a></li>
@@ -79,7 +79,7 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="nav-item"><a href="travel/index.html">Adventure Travel</a></li>
+                    <li class="nav-item"><a href="travel/">Adventure Travel</a></li>
                     <li class=""><a href="gallery.html">Gallery</a></li>
                     <li class="nav-item"><a href="contact.html">Contact Us</a></li>
                 </ul>
@@ -133,9 +133,8 @@
                     <h2 class="border-bottom">Seasoned Guides / Pick Your Species</h2>
                     <p><img src="images/guide_jv_river_drift_230x151.jpg" width="230" height="151" alt="Guided trip on the Saugeen" class="left" /><a href="flyshop/pro-staff.html">Grindstone guides</a> work over 200 days a year and along with other members
                         of our team, we spend more hours on the river than many are awake. There are few species we can&#8217;t target and our region includes the cold water haunts between Lake Erie and Georgian Bay. Steelhead, browns, rainbow and
-                        <a href="fishing/ontario/smallmouth.html">smallmouth bass</a> headline the list, but we have the resources to go after just about anything in south central and <a href="fishing/index.html">Southern Ontario</a>, including the great
-                        muskellunge. Anglers interested in pursuing fish not found in our region or an exciting change of pace are invited to join us for a <a href="travel/index.html">hosted fishing trip</a> to the mountains, coasts, or international
-                        destination.
+                        <a href="fishing/ontario/smallmouth.html">smallmouth bass</a> headline the list, but we have the resources to go after just about anything in south central and <a href="fishing/">Southern Ontario</a>, including the great muskellunge.
+                        Anglers interested in pursuing fish not found in our region or an exciting change of pace are invited to join us for a <a href="travel/">hosted fishing trip</a> to the mountains, coasts, or international destination.
                     </p>
                     <h2 class="border-bottom">#1 Choice for Group Outings</h2>
                     <p><img src="images/group_guided_trips_230x151.jpg" width="230" height="151" alt="Group guided trips" class="left" />With six boats and eleven members on our pro-staff team, no one is more equipped to accommodate corporate groups than
