--- a/_pgbackup/index_1664111627.html
+++ b/_pgbackup/index_1664111627.html
@@ -48,7 +48,7 @@
                     <li class="nav-item"><a href="home.html">Home</a></li>
                     <li class=""><a href="index.html">Fly Shop</a>
                         <ul class="sf-menu">
-                            <li class=""><a href="fly-tying/index.html">Fly Tying Classes</a>
+                            <li class=""><a href="fly-tying/">Fly Tying Classes</a>
                             </li>
                             <li class=""><a href="flyshop/pro-staff.html">Pro Staff</a></li>
                             <li class=""><a href="flyshop/news.html">Shop News</a></li>
@@ -57,7 +57,7 @@
                         </ul>
                     </li>
                     <li class="nav-item"><a href="guiding.html">Guide Service</a></li>
-                    <li class=""><a href="school/index.html">Fly Fishing School</a>
+                    <li class=""><a href="school/">Fly Fishing School</a>
                         <ul class="sf-menu">
                             <li class=""><a href="school/introduction-fly-fishing.html">Introduction</a>
                             </li>
@@ -80,9 +80,9 @@
                             </li>
                         </ul>
                     </li>
-                    <li class=""><a href="fishing/index.html">The Fishing</a>
+                    <li class=""><a href="fishing/">The Fishing</a>
                         <ul class="sf-menu">
-                            <li class=""><a href="fishing/ontario/index.html">Ontario
+                            <li class=""><a href="fishing/ontario/">Ontario
                                                                         Fishery</a>
                                 <ul class="sf-menu">
                                     <li class=""><a href="fishing/ontario/salmon.html">Ontario
@@ -95,7 +95,7 @@
                                                                                         Trout</a></li>
                                 </ul>
                             </li>
-                            <li class=""><a href="fishing/rivers/index.html">Ontario
+                            <li class=""><a href="fishing/rivers/">Ontario
                                                                         Rivers</a>
                                 <ul class="sf-menu">
                                     <li class=""><a href="fishing/rivers/grand.html">Grand
@@ -106,7 +106,7 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="nav-item"><a href="travel/index.html">Adventure Travel</a></li>
+                    <li class="nav-item"><a href="travel/">Adventure Travel</a></li>
                     <li class=""><a href="gallery.html">Gallery</a></li>
                     <li class="nav-item"><a href="contact.html">Contact Us</a></li>
                 </ul>
@@ -189,16 +189,16 @@
             <div id="travel" class="span-6 last">
                 <h2>Fly Fishing Travel </h2>
                 <p>Our Fly Fishing Travel Service hosts group trips to various destinations throughout Canada. Over the last 20 years, we have traveled extensively and visited many of the great rivers available to Canadian anglers.</p>
-                <p>If none of our hosted trips suits your schedule, we'll arrange an adventure for you with one of our partners. We will find a suitable outfitter and location that we have personally experienced, and eliminate all the guesswork. <a href="travel/index.html">Fly Fishing Travel</a></p>
+                <p>If none of our hosted trips suits your schedule, we'll arrange an adventure for you with one of our partners. We will find a suitable outfitter and location that we have personally experienced, and eliminate all the guesswork. <a href="travel/">Fly Fishing Travel</a></p>
             </div>
             <hr class="space" />
             <hr />
             <div id="school" class="span-7 colborder prepend-1">
                 <h2>Fly Fishing School</h2>
                 <p>Whether you are a novice or experienced angler, Grindstone offers a number of courses to improve your fly fishing skills. Our fly casting classes begin in April, with clinics tailored to each skill level.</p>
-                <p>Special guest instructors and lectures are offered throughout the year. See our full list of <a href="school/index.html">Fly Fishing School</a> Courses.</p>
+                <p>Special guest instructors and lectures are offered throughout the year. See our full list of <a href="school/">Fly Fishing School</a> Courses.</p>
                 <h2>Fly Tying Classes</h2>
-                <p>In the fall, our fly tying courses begin. We offer classes for all skill levels as well as private instruction. Check our <a href="fly-tying/index.html">fly tying
+                <p>In the fall, our fly tying courses begin. We offer classes for all skill levels as well as private instruction. Check our <a href="fly-tying/">fly tying
                                                 class</a> schedule for course details.</p>
             </div>
             <div class="span-7 colborder">
@@ -241,7 +241,7 @@
         </footer>
     </div>
     <!-- end outerWrapper -->
-    <script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
     <script src="js/scripts.js"></script>
     <script src="js/jquery.anythingslider.min.js"></script>
 
