--- a/fishing/hatch.html
+++ b/fishing/hatch.html
@@ -27,7 +27,7 @@
         <div id="header">
             <!-- begin header -->
             <div id="logo" class="span-6">
-                <a href="../index.html"> <img src="../css/img/gs_logo.png" alt="Grindstone Angling - Ontario Canada" width="201" height="103" /></a>
+                <a href="../"> <img src="../css/img/gs_logo.png" alt="Grindstone Angling - Ontario Canada" width="201" height="103" /></a>
             </div>
 
             <span id="tagline"><strong>Ontario&rsquo;s Premier Fly Shop, Outfitter, and Guide Services</strong></span> <span id="phone">905-689-0880</span> </div>
@@ -37,16 +37,16 @@
             <div id="mainmenu">
                 <ul class="sf-menu">
                     <li class="nav-item"><a href="../home.html">Home</a></li>
-                    <li class=""><a href="../index.html">Fly Shop</a>
+                    <li class=""><a href="../">Fly Shop</a>
                         <ul class="sf-menu">
-                            <li class=""><a href="../fly-tying/index.html">Fly Tying Classes</a></li>
+                            <li class=""><a href="../fly-tying/">Fly Tying Classes</a></li>
                             <li class=""><a href="../flyshop/pro-staff.html">Pro Staff</a></li>
                             <li class=""><a href="../flyshop/news.html">Shop News</a></li>
                             <li class=""><a href="../flyshop/trading-post.html">Trading Post</a></li>
                         </ul>
                     </li>
                     <li class="nav-item"><a href="../guiding.html">Guide Service</a></li>
-                    <li class=""><a href="../school/index.html">Fly Fishing School</a>
+                    <li class=""><a href="../school/">Fly Fishing School</a>
                         <ul class="sf-menu">
                             <li class=""><a href="../school/introduction-fly-fishing.html">Introduction</a></li>
                             <li class=""><a href="../school/intermediate-casting.html">Intermediate Fly Casting</a></li>
@@ -63,7 +63,7 @@
                     </li>
                     <li class=""><a href="index.html">The Fishing</a>
                         <ul class="sf-menu">
-                            <li class=""><a href="ontario/index.html">Ontario Fishery</a>
+                            <li class=""><a href="ontario/">Ontario Fishery</a>
                                 <ul class="sf-menu">
                                     <li class=""><a href="ontario/salmon.html">Ontario Salmon</a></li>
                                     <li class=""><a href="ontario/steelhead.html">Ontario Steelhead</a></li>
@@ -71,7 +71,7 @@
                                     <li class=""><a href="ontario/trout.html">Ontario Trout</a></li>
                                 </ul>
                             </li>
-                            <li class=""><a href="rivers/index.html">Ontario Rivers</a>
+                            <li class=""><a href="rivers/">Ontario Rivers</a>
                                 <ul class="sf-menu">
                                     <li class=""><a href="rivers/grand.html">Grand River</a></li>
                                     <li class=""><a href="rivers/saugeen.html">Saugeen River</a></li>
@@ -79,7 +79,7 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="nav-item"><a href="../travel/index.html">Adventure Travel</a></li>
+                    <li class="nav-item"><a href="../travel/">Adventure Travel</a></li>
                     <li class=""><a href="../gallery.html">Gallery</a></li>
                     <li class="nav-item"><a href="../contact.html">Contact Us</a></li>
                 </ul>
@@ -236,7 +236,7 @@
                 <div id="menu-wrapper">
                     <ul>
                         <li class="menu-item"><a href="index.html"><span>Ontario Fishing</span></a></li>
-                        <li class="menu-item"><a href="ontario/index.html"><span>Ontario Fishery</span></a>
+                        <li class="menu-item"><a href="ontario/"><span>Ontario Fishery</span></a>
                             <ul>
                                 <li class="menu-item"><a href="ontario/salmon.html"><span>Salmon</span></a></li>
                                 <li class="menu-item"><a href="ontario/steelhead.html"><span>Steelhead</span></a></li>
@@ -244,7 +244,7 @@
                                 <li class="menu-item"><a href="ontario/trout.html"><span>Trout</span></a></li>
                             </ul>
                         </li>
-                        <li class="menu-item"><a href="rivers/index.html"><span>Ontario Rivers</span></a>
+                        <li class="menu-item"><a href="rivers/"><span>Ontario Rivers</span></a>
                             <ul>
                                 <li class="menu-item"><a href="rivers/grand.html"><span>Grand River</span></a></li>
                                 <li class="menu-item"><a href="rivers/saugeen.html"><span>Saugeen River</span></a></li>
