--- a/fishing/ontario/trout.html
+++ b/fishing/ontario/trout.html
@@ -29,7 +29,7 @@
         <header id="header" role="banner">
             <!-- begin header -->
             <div id="logo" class="span-6">
-                <a href="../../index.html"> <img src="../../css/img/gs_logo.png" alt="Grindstone Angling - Ontario Canada" width="201" height="103" /></a>
+                <a href="../../"> <img src="../../css/img/gs_logo.png" alt="Grindstone Angling - Ontario Canada" width="201" height="103" /></a>
             </div>
 
             <span id="tagline"><strong>Ontario&rsquo;s Premier Fly Shop, Outfitter, and Guide Services</strong></span> <span id="phone">905-689-0880</span> </header>
@@ -40,16 +40,16 @@
             <div id="mainmenu">
                 <ul class="sf-menu">
                     <li class="nav-item"><a href="../../home.html">Home</a></li>
-                    <li class=""><a href="../../index.html">Fly Shop</a>
+                    <li class=""><a href="../../">Fly Shop</a>
                         <ul class="sf-menu">
-                            <li class=""><a href="../../fly-tying/index.html">Fly Tying Classes</a></li>
+                            <li class=""><a href="../../fly-tying/">Fly Tying Classes</a></li>
                             <li class=""><a href="../../flyshop/pro-staff.html">Pro Staff</a></li>
                             <li class=""><a href="../../flyshop/news.html">Shop News</a></li>
                             <li class=""><a href="../../flyshop/trading-post.html">Trading Post</a></li>
                         </ul>
                     </li>
                     <li class="nav-item"><a href="../../guiding.html">Guide Service</a></li>
-                    <li class=""><a href="../../school/index.html">Fly Fishing School</a>
+                    <li class=""><a href="../../school/">Fly Fishing School</a>
                         <ul class="sf-menu">
                             <li class=""><a href="../../school/introduction-fly-fishing.html">Introduction</a></li>
                             <li class=""><a href="../../school/intermediate-casting.html">Intermediate Fly Casting</a></li>
@@ -64,7 +64,7 @@
                             </li>
                         </ul>
                     </li>
-                    <li class=""><a href="../index.html">The Fishing</a>
+                    <li class=""><a href="../">The Fishing</a>
                         <ul class="sf-menu">
                             <li class=""><a href="index.html">Ontario Fishery</a>
                                 <ul class="sf-menu">
@@ -74,7 +74,7 @@
                                     <li class=""><a href="trout.html">Ontario Trout</a></li>
                                 </ul>
                             </li>
-                            <li class=""><a href="../rivers/index.html">Ontario Rivers</a>
+                            <li class=""><a href="../rivers/">Ontario Rivers</a>
                                 <ul class="sf-menu">
                                     <li class=""><a href="../rivers/grand.html">Grand River</a></li>
                                     <li class=""><a href="../rivers/saugeen.html">Saugeen River</a></li>
@@ -82,7 +82,7 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="nav-item"><a href="../../travel/index.html">Adventure Travel</a></li>
+                    <li class="nav-item"><a href="../../travel/">Adventure Travel</a></li>
                     <li class=""><a href="../../gallery.html">Gallery</a></li>
                     <li class="nav-item"><a href="../../contact.html">Contact Us</a></li>
                 </ul>
@@ -117,7 +117,7 @@
         <!-- end menu -->
         <div class="container">
             <div id="content" class="span-18 push-6 prepend-top" role="main">
-                <div id="crumbs"><a href="../index.html">Ontario Fishing</a>><a href="index.html">Ontario Fishery</a>><a href="trout.html">Trout</a> </div>
+                <div id="crumbs"><a href="../">Ontario Fishing</a>><a href="index.html">Ontario Fishery</a>><a href="trout.html">Trout</a> </div>
 
                 <!-- begin content -->
 
@@ -202,7 +202,7 @@
             <aside id="sidebar-left" class="span-6 pull-18 prepend-top last">
                 <div id="menu-wrapper">
                     <ul>
-                        <li class="menu-item"><a href="../index.html"><span>Ontario Fishing</span></a></li>
+                        <li class="menu-item"><a href="../"><span>Ontario Fishing</span></a></li>
                         <li class="menu-item"><a href="index.html"><span>Ontario Fishery</span></a>
                             <ul>
                                 <li class="menu-item"><a href="salmon.html"><span>Salmon</span></a></li>
@@ -211,7 +211,7 @@
                                 <li class="menu-item"><a href="trout.html"><span>Trout</span></a></li>
                             </ul>
                         </li>
-                        <li class="menu-item"><a href="../rivers/index.html"><span>Ontario Rivers</span></a>
+                        <li class="menu-item"><a href="../rivers/"><span>Ontario Rivers</span></a>
                             <ul>
                                 <li class="menu-item"><a href="../rivers/grand.html"><span>Grand River</span></a></li>
                                 <li class="menu-item"><a href="../rivers/saugeen.html"><span>Saugeen River</span></a></li>
