--- a/fishing/rivers/grand.html
+++ b/fishing/rivers/grand.html
@@ -27,7 +27,7 @@
         <header id="header" role="banner">
             <!-- begin header -->
             <div id="logo" class="span-6">
-                <a href="../../index.html"> <img src="../../css/img/gs_logo.png" alt="Grindstone Angling - Ontario Canada" width="201" height="103" /></a>
+                <a href="../../"> <img src="../../css/img/gs_logo.png" alt="Grindstone Angling - Ontario Canada" width="201" height="103" /></a>
             </div>
 
             <span id="tagline"><strong>Ontario&rsquo;s Premier Fly Shop, Outfitter, and Guide Services</strong></span> <span id="phone">905-689-0880</span> </header>
@@ -38,16 +38,16 @@
             <div id="mainmenu">
                 <ul class="sf-menu">
                     <li class="nav-item"><a href="../../home.html">Home</a></li>
-                    <li class=""><a href="../../index.html">Fly Shop</a>
+                    <li class=""><a href="../../">Fly Shop</a>
                         <ul class="sf-menu">
-                            <li class=""><a href="../../fly-tying/index.html">Fly Tying Classes</a></li>
+                            <li class=""><a href="../../fly-tying/">Fly Tying Classes</a></li>
                             <li class=""><a href="../../flyshop/pro-staff.html">Pro Staff</a></li>
                             <li class=""><a href="../../flyshop/news.html">Shop News</a></li>
                             <li class=""><a href="../../flyshop/trading-post.html">Trading Post</a></li>
                         </ul>
                     </li>
                     <li class="nav-item"><a href="../../guiding.html">Guide Service</a></li>
-                    <li class=""><a href="../../school/index.html">Fly Fishing School</a>
+                    <li class=""><a href="../../school/">Fly Fishing School</a>
                         <ul class="sf-menu">
                             <li class=""><a href="../../school/introduction-fly-fishing.html">Introduction</a></li>
                             <li class=""><a href="../../school/intermediate-casting.html">Intermediate Fly Casting</a></li>
@@ -62,9 +62,9 @@
                             </li>
                         </ul>
                     </li>
-                    <li class=""><a href="../index.html">The Fishing</a>
+                    <li class=""><a href="../">The Fishing</a>
                         <ul class="sf-menu">
-                            <li class=""><a href="../ontario/index.html">Ontario Fishery</a>
+                            <li class=""><a href="../ontario/">Ontario Fishery</a>
                                 <ul class="sf-menu">
                                     <li class=""><a href="../ontario/salmon.html">Ontario Salmon</a></li>
                                     <li class=""><a href="../ontario/steelhead.html">Ontario Steelhead</a></li>
@@ -80,7 +80,7 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="nav-item"><a href="../../travel/index.html">Adventure Travel</a></li>
+                    <li class="nav-item"><a href="../../travel/">Adventure Travel</a></li>
                     <li class=""><a href="../../gallery.html">Gallery</a></li>
                     <li class="nav-item"><a href="../../contact.html">Contact Us</a></li>
                 </ul>
@@ -115,7 +115,7 @@
         <!-- end menu -->
         <div class="container">
             <div id="content" class="span-18 push-6 prepend-top" role="main">
-                <div id="crumbs"><a href="../index.html">Ontario Fishing</a>><a href="index.html">Ontario Rivers</a>><a href="grand.html">Grand River</a> </div>
+                <div id="crumbs"><a href="../">Ontario Fishing</a>><a href="index.html">Ontario Rivers</a>><a href="grand.html">Grand River</a> </div>
 
                 <!-- begin content -->
 
@@ -214,8 +214,8 @@
             <aside id="sidebar-left" class="span-6 pull-18 prepend-top last">
                 <div id="menu-wrapper">
                     <ul>
-                        <li class="menu-item"><a href="../index.html"><span>Ontario Fishing</span></a></li>
-                        <li class="menu-item"><a href="../ontario/index.html"><span>Ontario Fishery</span></a>
+                        <li class="menu-item"><a href="../"><span>Ontario Fishing</span></a></li>
+                        <li class="menu-item"><a href="../ontario/"><span>Ontario Fishery</span></a>
                             <ul>
                                 <li class="menu-item"><a href="../ontario/salmon.html"><span>Salmon</span></a></li>
                                 <li class="menu-item"><a href="../ontario/steelhead.html"><span>Steelhead</span></a></li>
