--- a/fishing/rivers/index.html
+++ b/fishing/rivers/index.html
@@ -27,7 +27,7 @@
         <div id="header">
             <!-- begin header -->
             <div id="logo" class="span-6">
-                <a href="../../index.html"> <img src="../../css/img/gs_logo.png" alt="Grindstone Angling - Ontario Canada" width="201" height="103" /></a>
+                <a href="../../"> <img src="../../css/img/gs_logo.png" alt="Grindstone Angling - Ontario Canada" width="201" height="103" /></a>
             </div>
 
             <span id="tagline"><strong>Ontario&rsquo;s Premier Fly Shop, Outfitter, and Guide Services</strong></span> <span id="phone">905-689-0880</span> </div>
@@ -37,16 +37,16 @@
             <div id="mainmenu">
                 <ul class="sf-menu">
                     <li class="nav-item"><a href="../../home.html">Home</a></li>
-                    <li class=""><a href="../../index.html">Fly Shop</a>
+                    <li class=""><a href="../../">Fly Shop</a>
                         <ul class="sf-menu">
-                            <li class=""><a href="../../fly-tying/index.html">Fly Tying Classes</a></li>
+                            <li class=""><a href="../../fly-tying/">Fly Tying Classes</a></li>
                             <li class=""><a href="../../flyshop/pro-staff.html">Pro Staff</a></li>
                             <li class=""><a href="../../flyshop/news.html">Shop News</a></li>
                             <li class=""><a href="../../flyshop/trading-post.html">Trading Post</a></li>
                         </ul>
                     </li>
                     <li class="nav-item"><a href="../../guiding.html">Guide Service</a></li>
-                    <li class=""><a href="../../school/index.html">Fly Fishing School</a>
+                    <li class=""><a href="../../school/">Fly Fishing School</a>
                         <ul class="sf-menu">
                             <li class=""><a href="../../school/introduction-fly-fishing.html">Introduction</a></li>
                             <li class=""><a href="../../school/intermediate-casting.html">Intermediate Fly Casting</a></li>
@@ -61,9 +61,9 @@
                             </li>
                         </ul>
                     </li>
-                    <li class=""><a href="../index.html">The Fishing</a>
+                    <li class=""><a href="../">The Fishing</a>
                         <ul class="sf-menu">
-                            <li class=""><a href="../ontario/index.html">Ontario Fishery</a>
+                            <li class=""><a href="../ontario/">Ontario Fishery</a>
                                 <ul class="sf-menu">
                                     <li class=""><a href="../ontario/salmon.html">Ontario Salmon</a></li>
                                     <li class=""><a href="../ontario/steelhead.html">Ontario Steelhead</a></li>
@@ -79,7 +79,7 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="nav-item"><a href="../../travel/index.html">Adventure Travel</a></li>
+                    <li class="nav-item"><a href="../../travel/">Adventure Travel</a></li>
                     <li class=""><a href="../../gallery.html">Gallery</a></li>
                     <li class="nav-item"><a href="../../contact.html">Contact Us</a></li>
                 </ul>
@@ -175,8 +175,8 @@
             <div id="sidebar-left" class="span-6 pull-12 prepend-top">
                 <div id="menu-wrapper">
                     <ul>
-                        <li class="menu-item"><a href="../index.html"><span>Ontario Fishing</span></a></li>
-                        <li class="menu-item"><a href="../ontario/index.html"><span>Ontario Fishery</span></a>
+                        <li class="menu-item"><a href="../"><span>Ontario Fishing</span></a></li>
+                        <li class="menu-item"><a href="../ontario/"><span>Ontario Fishery</span></a>
                             <ul>
                                 <li class="menu-item"><a href="../ontario/salmon.html"><span>Salmon</span></a></li>
                                 <li class="menu-item"><a href="../ontario/steelhead.html"><span>Steelhead</span></a></li>
@@ -222,7 +222,7 @@
             <!-- end #sidebar-left -->
             <div id="sidebar-right" class="span-6 push-6 prepend-top last">
                 <div class="box rotator">
-                    <a href="../../index.html"><img alt="GPX Textured" src="../../images/ads/flyline_shop_gs_194x300.png" border="0" /></a>
+                    <a href="../../"><img alt="GPX Textured" src="../../images/ads/flyline_shop_gs_194x300.png" border="0" /></a>
                 </div>
                 <div class="box news">
                     <h2>News</h2>
