--- a/flyshop/index.html
+++ b/flyshop/index.html
@@ -26,7 +26,7 @@
         <div id="header">
             <!-- begin header -->
             <div id="logo" class="span-6">
-                <a href="../index.html"> <img src="../css/img/gs_logo.png" alt="Grindstone Angling - Ontario Canada" width="201" height="103" /></a>
+                <a href="../"> <img src="../css/img/gs_logo.png" alt="Grindstone Angling - Ontario Canada" width="201" height="103" /></a>
             </div>
 
             <span id="tagline"><strong>Ontario&rsquo;s Premier Guide Services</strong></span> <span id="phone">905-689-0880</span> </div>
@@ -36,16 +36,16 @@
             <div id="mainmenu">
                 <ul class="sf-menu">
                     <li class="nav-item"><a href="../home.html">Home</a></li>
-                    <li class=""><a href="../index.html">Fly Shop</a>
+                    <li class=""><a href="../">Fly Shop</a>
                         <ul class="sf-menu">
-                            <li class=""><a href="../fly-tying/index.html">Fly Tying Classes</a></li>
+                            <li class=""><a href="../fly-tying/">Fly Tying Classes</a></li>
                             <li class=""><a href="pro-staff.html">Pro Staff</a></li>
                             <li class=""><a href="news.html">Shop News</a></li>
                             <li class=""><a href="trading-post.html">Trading Post</a></li>
                         </ul>
                     </li>
                     <li class="nav-item"><a href="../guiding.html">Guide Service</a></li>
-                    <li class=""><a href="../school/index.html">Fly Fishing School</a>
+                    <li class=""><a href="../school/">Fly Fishing School</a>
                         <ul class="sf-menu">
                             <li class=""><a href="../school/introduction-fly-fishing.html">Introduction</a></li>
                             <li class=""><a href="../school/intermediate-casting.html">Intermediate Fly Casting</a></li>
@@ -60,9 +60,9 @@
                             </li>
                         </ul>
                     </li>
-                    <li class=""><a href="../fishing/index.html">The Fishing</a>
+                    <li class=""><a href="../fishing/">The Fishing</a>
                         <ul class="sf-menu">
-                            <li class=""><a href="../fishing/ontario/index.html">Ontario Fishery</a>
+                            <li class=""><a href="../fishing/ontario/">Ontario Fishery</a>
                                 <ul class="sf-menu">
                                     <li class=""><a href="../fishing/ontario/salmon.html">Ontario Salmon</a></li>
                                     <li class=""><a href="../fishing/ontario/steelhead.html">Ontario Steelhead</a></li>
@@ -70,7 +70,7 @@
                                     <li class=""><a href="../fishing/ontario/trout.html">Ontario Trout</a></li>
                                 </ul>
                             </li>
-                            <li class=""><a href="../fishing/rivers/index.html">Ontario Rivers</a>
+                            <li class=""><a href="../fishing/rivers/">Ontario Rivers</a>
                                 <ul class="sf-menu">
                                     <li class=""><a href="../fishing/rivers/grand.html">Grand River</a></li>
                                     <li class=""><a href="../fishing/rivers/saugeen.html">Saugeen River</a></li>
@@ -78,7 +78,7 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="nav-item"><a href="../travel/index.html">Adventure Travel</a></li>
+                    <li class="nav-item"><a href="../travel/">Adventure Travel</a></li>
                     <li class=""><a href="../gallery.html">Gallery</a></li>
                     <li class="nav-item"><a href="../contact.html">Contact Us</a></li>
                 </ul>
@@ -114,7 +114,7 @@
         <!-- end menu -->
         <div class="container">
             <div id="content" class="span-12 push-6 prepend-top">
-                <div id="crumbs"><a href="../index.html">Fly Shop</a> </div>
+                <div id="crumbs"><a href="../">Fly Shop</a> </div>
                 <!-- begin content -->
                 <h1>Flyshop is Closed</h1>
                 <p>The location at 24 Mill St.North in Waterdown is permanently closed. We are looking at new options for a future stare at the present time.
@@ -127,10 +127,10 @@
             <div id="sidebar-left" class="span-6 pull-12 prepend-top last">
                 <div id="menu-wrapper">
                     <ul>
-                        <li class="menu-item"><a href="../index.html"><span>Fly Shop</span></a>
+                        <li class="menu-item"><a href="../"><span>Fly Shop</span></a>
                             <ul>
                                 <li class="menu-item"><a href="pro-staff.html"><span>Pro Staff</span></a></li>
-                                <li class="menu-item"><a href="../fly-tying/index.html"><span>Fly Tying Classes</span></a></li>
+                                <li class="menu-item"><a href="../fly-tying/"><span>Fly Tying Classes</span></a></li>
                                 <li class="menu-item"><a href="news.html"><span>News</span></a></li>
                                 <li class="menu-item"><a href="trading-post.html"><span>Trading Post</span></a></li>
                                 <li class="menu-item"><a href="location.html"><span>Location</span></a></li>
