--- a/flyshop/trading-post.html
+++ b/flyshop/trading-post.html
@@ -26,7 +26,7 @@
         <header id="header" role="banner">
             <!-- begin header -->
             <div id="logo" class="span-6">
-                <a href="../index.html">
+                <a href="../">
                     <img src="../css/img/gs_logo.png" alt="Grindstone Angling - Ontario Canada" width="201" height="103" /></a>
             </div>
 
@@ -39,16 +39,16 @@
             <div id="mainmenu">
                 <ul class="sf-menu">
                     <li class="nav-item"><a href="../home.html">Home</a></li>
-                    <li class=""><a href="../index.html">Fly Shop</a>
+                    <li class=""><a href="../">Fly Shop</a>
                         <ul class="sf-menu">
-                            <li class=""><a href="../fly-tying/index.html">Fly Tying Classes</a></li>
+                            <li class=""><a href="../fly-tying/">Fly Tying Classes</a></li>
                             <li class=""><a href="pro-staff.html">Pro Staff</a></li>
                             <li class=""><a href="news.html">Shop News</a></li>
                             <li class=""><a href="trading-post.html">Trading Post</a></li>
                         </ul>
                     </li>
                     <li class="nav-item"><a href="../guiding.html">Guide Service</a></li>
-                    <li class=""><a href="../school/index.html">Fly Fishing School</a>
+                    <li class=""><a href="../school/">Fly Fishing School</a>
                         <ul class="sf-menu">
                             <li class=""><a href="../school/introduction-fly-fishing.html">Introduction</a></li>
                             <li class=""><a href="../school/intermediate-casting.html">Intermediate Fly Casting</a></li>
@@ -63,9 +63,9 @@
                             </li>
                         </ul>
                     </li>
-                    <li class=""><a href="../fishing/index.html">The Fishing</a>
+                    <li class=""><a href="../fishing/">The Fishing</a>
                         <ul class="sf-menu">
-                            <li class=""><a href="../fishing/ontario/index.html">Ontario Fishery</a>
+                            <li class=""><a href="../fishing/ontario/">Ontario Fishery</a>
                                 <ul class="sf-menu">
                                     <li class=""><a href="../fishing/ontario/salmon.html">Ontario Salmon</a></li>
                                     <li class=""><a href="../fishing/ontario/steelhead.html">Ontario Steelhead</a></li>
@@ -73,7 +73,7 @@
                                     <li class=""><a href="../fishing/ontario/trout.html">Ontario Trout</a></li>
                                 </ul>
                             </li>
-                            <li class=""><a href="../fishing/rivers/index.html">Ontario Rivers</a>
+                            <li class=""><a href="../fishing/rivers/">Ontario Rivers</a>
                                 <ul class="sf-menu">
                                     <li class=""><a href="../fishing/rivers/grand.html">Grand River</a></li>
                                     <li class=""><a href="../fishing/rivers/saugeen.html">Saugeen River</a></li>
@@ -81,7 +81,7 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="nav-item"><a href="../travel/index.html">Adventure Travel</a></li>
+                    <li class="nav-item"><a href="../travel/">Adventure Travel</a></li>
                     <li class=""><a href="../gallery.html">Gallery</a></li>
                     <li class="nav-item"><a href="../contact.html">Contact Us</a></li>
                 </ul>
@@ -116,7 +116,7 @@
         <!-- end menu -->
         <div class="container">
             <div id="content" class="span-18 push-6 prepend-top" role="main">
-                <div id="crumbs"><a href="../index.html">Fly Shop</a>><a href="trading-post.html">Trading Post</a> </div>
+                <div id="crumbs"><a href="../">Fly Shop</a>><a href="trading-post.html">Trading Post</a> </div>
                 <!-- begin content -->
                 <h1>The Trading Post</h1>
                 <p>Got something to sell? Looking for a great deal on some used fly fishing gear? Take a look at the items below. Everything listed is available in the fly shop only. Questions? Give us a call. </p>
