--- a/travel/index.html
+++ b/travel/index.html
@@ -26,7 +26,7 @@
         <header id="header" role="banner">
             <!-- begin header -->
             <div id="logo" class="span-6">
-                <a href="../index.html"> <img src="../css/img/gs_logo.png" alt="Grindstone Angling - Ontario Canada" width="201" height="103"></a>
+                <a href="../"> <img src="../css/img/gs_logo.png" alt="Grindstone Angling - Ontario Canada" width="201" height="103"></a>
             </div>
 
             <span id="tagline"><strong>Ontario&#8217;s Premier Fly Shop, Outfitter, and Guide Services</strong></span> <span id="phone">905-689-0880</span> </header>
@@ -37,16 +37,16 @@
             <div id="mainmenu">
                 <ul class="sf-menu">
                     <li class="nav-item"><a href="../home.html">Home</a></li>
-                    <li class=""><a href="../index.html">Fly Shop</a>
+                    <li class=""><a href="../">Fly Shop</a>
                         <ul class="sf-menu">
-                            <li class=""><a href="../fly-tying/index.html">Fly Tying Classes</a></li>
+                            <li class=""><a href="../fly-tying/">Fly Tying Classes</a></li>
                             <li class=""><a href="../flyshop/pro-staff.html">Pro Staff</a></li>
                             <li class=""><a href="../flyshop/news.html">Shop News</a></li>
                             <li class=""><a href="../flyshop/trading-post.html">Trading Post</a></li>
                         </ul>
                     </li>
                     <li class="nav-item"><a href="../guiding.html">Guide Service</a></li>
-                    <li class=""><a href="../school/index.html">Fly Fishing School</a>
+                    <li class=""><a href="../school/">Fly Fishing School</a>
                         <ul class="sf-menu">
                             <li class=""><a href="../school/introduction-fly-fishing.html">Introduction</a></li>
                             <li class=""><a href="../school/intermediate-casting.html">Intermediate Fly Casting</a></li>
@@ -61,9 +61,9 @@
                             </li>
                         </ul>
                     </li>
-                    <li class=""><a href="../fishing/index.html">The Fishing</a>
+                    <li class=""><a href="../fishing/">The Fishing</a>
                         <ul class="sf-menu">
-                            <li class=""><a href="../fishing/ontario/index.html">Ontario Fishery</a>
+                            <li class=""><a href="../fishing/ontario/">Ontario Fishery</a>
                                 <ul class="sf-menu">
                                     <li class=""><a href="../fishing/ontario/salmon.html">Ontario Salmon</a></li>
                                     <li class=""><a href="../fishing/ontario/steelhead.html">Ontario Steelhead</a></li>
@@ -71,7 +71,7 @@
                                     <li class=""><a href="../fishing/ontario/trout.html">Ontario Trout</a></li>
                                 </ul>
                             </li>
-                            <li class=""><a href="../fishing/rivers/index.html">Ontario Rivers</a>
+                            <li class=""><a href="../fishing/rivers/">Ontario Rivers</a>
                                 <ul class="sf-menu">
                                     <li class=""><a href="../fishing/rivers/grand.html">Grand River</a></li>
                                     <li class=""><a href="../fishing/rivers/saugeen.html">Saugeen River</a></li>
