fixed broken links to home

--- a/_pgbackup/index_1664111761.html
+++ b/_pgbackup/index_1664111761.html
@@ -39,7 +39,7 @@
             <div id="mainmenu">
                 <ul class="sf-menu">
                     <li class="nav-item">
-                        <a href="home.html">Home</a>
+                        <a href="/">Home</a>
                     </li>
                     <li class="">
                         <a href="index.html">Fly Shop</a>
