--- a/fishing/index.html
+++ b/fishing/index.html
@@ -38,7 +38,7 @@
             <!-- begin menu 2 main -->
             <div id="mainmenu">
                 <ul class="sf-menu">
-                    <li class="nav-item"><a href="../home.html">Home</a></li>
+                    <li class="nav-item"><a href="../">Home</a></li>
                     <li class=""><a href=".index.html">Fly
                                                         Shop</a>
                         <ul class="sf-menu">
