--- a/fishing/rivers/grand.html
+++ b/fishing/rivers/grand.html
@@ -37,7 +37,7 @@
             <!-- begin menu 2 main -->
             <div id="mainmenu">
                 <ul class="sf-menu">
-                    <li class="nav-item"><a href="../../home.html">Home</a></li>
+                    <li class="nav-item"><a href="../../">Home</a></li>
                     <li class=""><a href="../../">Fly Shop</a>
                         <ul class="sf-menu">
                             <li class=""><a href="../../fly-tying/">Fly Tying Classes</a></li>
