--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en-US">
-<!-- BC_OBNW -->
-
-<head>
+ <head>
+   <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ontario Fly Fishing Outfitter - Grindstone Angling</title>
     <meta name="description" content="Come visit the premier Ontario fly fishing outfitter. Grindstone has a  full service fly shop,  fishing guide services, fly fishing school, fly tying classes and more await the seasoned or beginning angler. Detailed information on the Ontario fishery inside."
     />
-    <meta NAME="robots" CONTENT="INDEX,FOLLOW" />
+
     <link type="text/css" href="StyleSheets/ModuleStyleSheets.css" rel="StyleSheet" />
-    <script type="text/javascript">
-        var jslang = 'EN';
-    </script>
+    
     <link href="css/screen.min.css" rel="stylesheet" type="text/css" media="screen" />
     <link href="css/anythingslider.min.css" rel="stylesheet" type="text/css" media="screen" />
     <link href="https://fonts.googleapis.com/css?family=Cantarell:regular,italic,bold" rel="stylesheet" type="text/css" />
@@ -18,8 +17,7 @@
     <link type="text/css" rel="stylesheet" href="data:text/css," />
     <meta charset="UTF-8" />
     <meta name="google-site-verification" content="aKmHZEoHeYo6oAWZUCj-ueiNMjD_Bk9LzAgRbTIYdIM" />
-    <!--[if IE]><link rel="stylesheet" href="/css/ie.css" type="text/css" media="screen" /><![endif]-->
-    <script type="text/javascript" src="CatalystScripts/Java_Box.js%3Fvs=b414.r527193-phase1"></script>
+   
 </head>
 
 <body class="home">
