--- a/school/intermediate-casting.html
+++ b/school/intermediate-casting.html
@@ -1,20 +1,18 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 
 <html lang="en-US">
 
-<!-- BC_OBNW -->
-
-<head>
+ <head>
+   <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Intermediate Fly Casting</title>
     <link type="text/css" href="../StyleSheets/ModuleStyleSheets.css" rel="StyleSheet" />
-    <script type="text/javascript">
-        var jslang = 'EN';
-    </script>
+    
     <link href="../css/screen.min.css" rel="stylesheet" type="text/css" media="screen" />
     <link href="http://fonts.googleapis.com/css?family=Cantarell:regular,italic,bold" rel="stylesheet" type="text/css" />
     <script src="../js/modernizr-1.7.min.js" type="text/javascript"></script>
     <meta charset="UTF-8" />
-    <!--[if IE]><link rel="stylesheet" href="/css/ie.css" type="text/css" media="screen" /><![endif]-->
     <!--[if IE 6]> <link href="/css/ie6.css" rel="stylesheet" type="text/css" media="screen" />       <![endif]-->
     <script type="text/javascript" src="../CatalystScripts/Java_Box.js%3Fvs=b414.r527193-phase1"></script>
 </head>
